fix(ghost-theme): hide scrollbar

--- a/ghost-theme/assets/css/theme.css
+++ b/ghost-theme/assets/css/theme.css
@@ -34,6 +34,11 @@
 
 html {
     background: var(--bg);
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 body {
